<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="@dimen/margin_card_medium_2"
    android:layout_marginRight="@dimen/margin_card_medium_2"
    android:layout_marginTop="@dimen/margin_card_medium_2"
    app:cardElevation="4dp"
    android:backgroundTint="#FFFFFF">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_publication_logo"
            android:layout_width="@dimen/logo_size"
            android:layout_height="@dimen/logo_size"
            android:scaleType="centerCrop"
            android:src="@drawable/img_publication_logo"
            android:layout_margin="@dimen/margin_card_medium_2" />

        <TextView
            android:id="@+id/tv_publication_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Eleven Media"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_regular_2x"
            android:layout_toRightOf="@id/iv_publication_logo"
            android:layout_alignTop="@id/iv_publication_logo"
            android:layout_marginTop="@dimen/margin_medium" />

        <TextView
            android:id="@+id/tv_published_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Posted At - Jan 01 - 6:30AM"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/text_regular"
            android:layout_alignLeft="@id/tv_publication_name"
            android:layout_below="@id/tv_publication_name"
            android:layout_marginTop="@dimen/margin_small" />

        <ImageView
            android:id="@+id/iv_favourite_news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_favorite_border_primary_24dp"
            android:layout_alignParentRight="true"
            android:padding="@dimen/margin_medium_2"
            android:clickable="true"
            android:foreground="@drawable/bg_ripple_primary"/>

        <TextView
            android:id="@+id/tv_brief_news"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_news"
            android:textColor="@color/primary_text"
            android:lineSpacingMultiplier="1.3"
            android:layout_below="@id/iv_publication_logo"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium_n"
            android:maxLines="8"
            android:ellipsize="end"/>

        <ImageView
            android:id="@+id/iv_news_hero_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/img_news_placeholder"
            android:layout_below="@id/tv_brief_news"
            android:layout_marginTop="@dimen/margin_medium_2" />

        <TextView
            android:id="@+id/tv_news_statistical_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3 Likes - 3 Comments - Sent to 6 people"
            android:layout_below="@id/iv_news_hero_image"
            android:textColor="@color/primary"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium" />

        <LinearLayout
            android:id="@+id/ll_news_user_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_below="@id/tv_news_statistical_data">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:foreground="@drawable/bg_ripple_primary">

                <TextView
                    android:id="@+id/btn_comment_news"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/size_tappable_small"
                    android:text="@string/btn_comment_news"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/text_regular"
                    android:gravity="center"
                    android:drawableStart="@drawable/ic_chat_bubble_outline_primary_24dp"
                    android:layout_gravity="center"
                    android:drawablePadding="@dimen/margin_card_medium_2" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:foreground="@drawable/bg_ripple_primary">

                <TextView
                    android:id="@+id/btn_sent_to_news"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/size_tappable_small"
                    android:text="@string/btn_sent_to_news"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/text_regular"
                    android:gravity="center_vertical"
                    android:drawableStart="@drawable/ic_send_primary_24dp"
                    android:layout_gravity="center"
                    android:drawablePadding="@dimen/margin_card_medium_2" />

            </FrameLayout>

        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>
