<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="256dp"
            app:contentScrim="?attr/colorAccent"
            app:layout_scrollFlags="scroll|enterAlways"
            android:fitsSystemWindows="true">

            <android.support.v4.view.ViewPager
                android:id="@+id/vp_news_details_images"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:fitsSystemWindows="true">

            </android.support.v4.view.ViewPager>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_publication_logo"
                    android:layout_width="@dimen/logo_size"
                    android:layout_height="@dimen/logo_size"
                    android:src="@drawable/img_publication_logo"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="@dimen/news_details_publication_logo_margin_bottom"
                    android:layout_marginLeft="@dimen/margin_medium_2"
                    />

                <TextView
                    android:id="@+id/tv_publication_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Eleven Media"
                    android:layout_toRightOf="@id/iv_publication_logo"
                    android:layout_alignTop="@id/iv_publication_logo"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:textSize="@dimen/text_regular_3x"
                    android:textColor="@color/white_full"
                    android:layout_marginLeft="@dimen/margin_medium_2"
                    android:shadowColor="@color/black"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="1"
                    />

                <TextView
                    android:id="@+id/tv_published_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Posted At : Jan 01 - 6:30AM"
                    android:layout_below="@id/tv_publication_name"
                    android:layout_alignLeft="@id/tv_publication_name"
                    android:layout_marginTop="@dimen/margin_small"
                    android:textColor="@color/white_full"
                    android:textSize="@dimen/text_regular_2x"
                    android:shadowColor="@color/black"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="1"
                    />

            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin">

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_news_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium_2"
                android:lineSpacingMultiplier="1.3"
                android:text="@string/dummy_news_details" />

            <TextView
                android:id="@+id/tv_related_news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Related News"
                android:layout_marginLeft="@dimen/margin_medium_2"
                android:textColor="@color/black_full"
                android:textStyle="bold"
                android:textSize="@dimen/text_regular_2x"
                android:layout_below="@id/tv_news_details"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_related_news"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:layout_below="@id/tv_related_news">

            </android.support.v7.widget.RecyclerView>

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:padding="@dimen/margin_medium_2"
        android:background="@color/white_full"
        android:weightSum="3">

        <TextView
            android:id="@+id/btn_comment_news"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_large_size"
            style="@style/AccentBorderButton"
            android:paddingLeft="@dimen/margin_xxlarge"
            android:paddingRight="@dimen/margin_xlarge"
            android:text="@string/btn_comment_news"
            android:textColor="@color/primary_text"
            android:drawableLeft="@drawable/ic_chat_bubble_outline_accent_24dp"
            android:gravity="center"
            android:layout_weight="2"
            />

        <TextView
            android:id="@+id/btn_send_to_news"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_large_size"
            style="@style/AccentButton"
            android:paddingLeft="@dimen/margin_xlarge"
            android:paddingRight="@dimen/margin_xlarge"
            android:text="@string/btn_send_to_news"
            android:textColor="@color/white_full"
            android:drawableLeft="@drawable/ic_send_white_24dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/margin_medium"
            />

    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin_medium_2"
        android:src="@drawable/ic_share_24dp"
        app:layout_anchor="@id/appbar_layout"
        app:layout_anchorGravity="right|bottom" />

</android.support.design.widget.CoordinatorLayout>
